--- a/StudentGradesProgram/StudentGradesProgram/StudentGradesProgram.vcxproj.filters
+++ b/StudentGradesProgram/StudentGradesProgram/StudentGradesProgram.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Student.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="StudentProgram.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
